--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <header>
         <img src="/images/image_geometry_1.svg" alt="Header Icon" class="header-icon logo-icon">
         <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon">
-    </header>    
+    </header>
+    <section class="headline">
+        <h1>Praises<br>Tula</h1>
+        <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
+        <a href="#" class="button dark-button start-collaboration">Start Collaboration</a>
+    </section>
 </body>
 </html>
