Converted header icon to background image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/image_geometry_1.svg" alt="Header Icon" class="header-icon logo-icon">
+        <!-- <img src="/images/image_geometry_1.svg" alt="Header Icon" class="header-icon logo-icon"> -->
         <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon">
     </header>
     <section class="headline">
