Created the Projects section

--- a/index.html
+++ b/index.html
@@ -8,17 +8,98 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/579b112cc6.js" crossorigin="anonymous"></script>
     <title>Praises Tula</title>
 </head>
 <body>
     <header>
-        <!-- <img src="/images/image_geometry_1.svg" alt="Header Icon" class="header-icon logo-icon"> -->
         <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon">
     </header>
     <section class="headline">
         <h1>Praises<br>Tula</h1>
         <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
         <a href="#" class="button dark-button start-collaboration">Start Collaboration</a>
+    </section>
+    <section class="projects">
+        <h2>Projects</h2>
+        <!-- Project 01 -->
+        <section class="project">
+            <img src="images/Rectangle_21.svg" alt="Project 1" class="project-image">
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
+                </div>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- Project 02 -->
+        <section class="project">
+            <img src="images/Rectangle_22.svg" alt="Project 1" class="project-image">
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
+                </div>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- Project 03 -->
+        <section class="project">
+            <img src="images/Rectangle_23.svg" alt="Project 1" class="project-image">
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
+                </div>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- Project 04 -->
+        <section class="project">
+            <img src="images/Rectangle_24.svg" alt="Project 1" class="project-image">
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
+                </div>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- Project 05 -->
+        <section class="project">
+            <img src="images/Rectangle_25.svg" alt="Project 1" class="project-image">
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
+                </div>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- Project 06 -->
+        <section class="project">
+            <img src="images/Rectangle_26.svg" alt="Project 1" class="project-image">
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
+                </div>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </section>
     </section>
 </body>
 </html>
