Created the About section

--- a/index.html
+++ b/index.html
@@ -15,91 +15,139 @@
     <header>
         <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon">
     </header>
-    <section class="headline">
-        <h1>Praises<br>Tula</h1>
-        <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-        <a href="#" class="button dark-button start-collaboration">Start Collaboration</a>
-    </section>
-    <section class="projects">
-        <h2>Projects</h2>
-        <!-- Project 01 -->
-        <section class="project">
-            <img src="images/Rectangle_21.svg" alt="Project 1" class="project-image">
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
-                </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
+    <main>
+        <section class="headline">
+            <h1>Praises<br>Tula</h1>
+            <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
+            <a href="#" class="button dark-button start-collaboration">Start Collaboration</a>
         </section>
-        <!-- Project 02 -->
-        <section class="project">
-            <img src="images/Rectangle_22.svg" alt="Project 1" class="project-image">
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
+        <section class="projects">
+            <h2>Projects</h2>
+            <!-- Project 01 -->
+            <section class="project">
+                <img src="images/Rectangle_21.svg" alt="Project 1" class="project-image">
+                <div class="project-box">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <div class="language-container">
+                        <span class="language">HTML/CSS</span>
+                        <span class="language">Ruby on Rails</span>
+                        <span class="language">JavaScript</span>
+                    </div>
+                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </section>
-        <!-- Project 03 -->
-        <section class="project">
-            <img src="images/Rectangle_23.svg" alt="Project 1" class="project-image">
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
+            </section>
+            <!-- Project 02 -->
+            <section class="project">
+                <img src="images/Rectangle_22.svg" alt="Project 1" class="project-image">
+                <div class="project-box">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <div class="language-container">
+                        <span class="language">HTML/CSS</span>
+                        <span class="language">Ruby on Rails</span>
+                        <span class="language">JavaScript</span>
+                    </div>
+                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </section>
-        <!-- Project 04 -->
-        <section class="project">
-            <img src="images/Rectangle_24.svg" alt="Project 1" class="project-image">
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
+            </section>
+            <!-- Project 03 -->
+            <section class="project">
+                <img src="images/Rectangle_23.svg" alt="Project 1" class="project-image">
+                <div class="project-box">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <div class="language-container">
+                        <span class="language">HTML/CSS</span>
+                        <span class="language">Ruby on Rails</span>
+                        <span class="language">JavaScript</span>
+                    </div>
+                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </section>
-        <!-- Project 05 -->
-        <section class="project">
-            <img src="images/Rectangle_25.svg" alt="Project 1" class="project-image">
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
+            </section>
+            <!-- Project 04 -->
+            <section class="project">
+                <img src="images/Rectangle_24.svg" alt="Project 1" class="project-image">
+                <div class="project-box">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <div class="language-container">
+                        <span class="language">HTML/CSS</span>
+                        <span class="language">Ruby on Rails</span>
+                        <span class="language">JavaScript</span>
+                    </div>
+                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </section>
-        <!-- Project 06 -->
-        <section class="project">
-            <img src="images/Rectangle_26.svg" alt="Project 1" class="project-image">
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
+            </section>
+            <!-- Project 05 -->
+            <section class="project">
+                <img src="images/Rectangle_25.svg" alt="Project 1" class="project-image">
+                <div class="project-box">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <div class="language-container">
+                        <span class="language">HTML/CSS</span>
+                        <span class="language">Ruby on Rails</span>
+                        <span class="language">JavaScript</span>
+                    </div>
+                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
+            </section>
+            <!-- Project 06 -->
+            <section class="project">
+                <img src="images/Rectangle_26.svg" alt="Project 1" class="project-image">
+                <div class="project-box">
+                    <h3 class="project-name">Project name goes here</h3>
+                    <div class="language-container">
+                        <span class="language">HTML/CSS</span>
+                        <span class="language">Ruby on Rails</span>
+                        <span class="language">JavaScript</span>
+                    </div>
+                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </section>
         </section>
-    </section>
+        <section class="about">
+            <h2>About</h2>
+            <p>I'm a Software Developer located in Nigeria. I have great passion for UI creation, effect, animation and dynamic user experiences.<br><br>
+            I derive great pleasure in using software programs to develop solutions to problems while having a high test of excellence and good attention to detail. Fan of Liverpool FC, love TV series and sports.<br><br>
+            Interested in both Front-End and Back-End spectrum. I am also interested in working on ambitious projects with positive people and goal oriented companies.</p>
+            <a href="#" class="button dark-button get-cv">Get my CV <i class="fa-solid fa-download"></i></a>
+            <section class="about-box">
+                <section class="about-lang-color">
+                    <section class="about-languages">
+                        <p class="about-list-heading">Languages</p>
+                        <ul class="about-list">
+                            <li>JavaScript (ES5/ES6)</li>
+                            <li>Ruby</li>
+                            <li>Python</li>
+                            <li>C/C++</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                    </section>
+                </section>
+                <section class="about-fwork-color">
+                    <section class="about-framework">
+                        <legend class="about-list-heading">Frame Works</legend>
+                        <ul class="about-list">
+                            <li>Bootstrap</li>
+                            <li>Ruby  on rails</li>
+                            <li>RSpec</li>
+                            <li>Capibara</li>
+                            <li>Selenium</li>
+                        </ul>
+                    </section>
+                </section>
+                <section class="about-skills-color">
+                    <section class="about-skills">
+                        <legend class="about-list-heading">Skills</legend>
+                        <ul class="about-list">
+                            <li>Codekit</li>
+                            <li>Codepen</li>
+                            <li>GitHub</li>
+                            <li>GitLAb</li>
+                            <li>Terminal</li>
+                        </ul>
+                    </section>
+                </section>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
