Fixed some linter problems

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             Interested in both Front-End and Back-End spectrum. I am also interested in working on ambitious projects with positive people and goal oriented companies.</p>
             <a href="#" class="button dark-button get-cv">Get my CV <i class="fa-solid fa-download"></i></a>
             <section class="about-box">
-                <section class="about-lang-color">
-                    <section class="about-languages">
+                <div class="about-lang-color">
+                    <div class="about-languages">
                         <p class="about-list-heading">Languages</p>
                         <ul class="about-list">
                             <li>JavaScript (ES5/ES6)</li>
@@ -120,11 +120,11 @@
                             <li>HTML</li>
                             <li>CSS</li>
                         </ul>
-                    </section>
-                </section>
-                <section class="about-fwork-color">
-                    <section class="about-framework">
-                        <legend class="about-list-heading">Frame Works</legend>
+                    </div>
+                </div>
+                <div class="about-fwork-color">
+                    <div class="about-framework">
+                        <p class="about-list-heading">Frame Works</p>
                         <ul class="about-list">
                             <li>Bootstrap</li>
                             <li>Ruby  on rails</li>
@@ -132,11 +132,11 @@
                             <li>Capibara</li>
                             <li>Selenium</li>
                         </ul>
-                    </section>
-                </section>
-                <section class="about-skills-color">
-                    <section class="about-skills">
-                        <legend class="about-list-heading">Skills</legend>
+                    </div>
+                </div>
+                <div class="about-skills-color">
+                    <div class="about-skills">
+                        <p` class="about-list-heading">Skills</p>
                         <ul class="about-list">
                             <li>Codekit</li>
                             <li>Codepen</li>
@@ -144,8 +144,8 @@
                             <li>GitLAb</li>
                             <li>Terminal</li>
                         </ul>
-                    </section>
-                </section>
+                    </div>
+                </div>
             </section>
         </section>
     </main>
