Fixed more linter problems

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             I derive great pleasure in using software programs to develop solutions to problems while having a high test of excellence and good attention to detail. Fan of Liverpool FC, love TV series and sports.<br><br>
             Interested in both Front-End and Back-End spectrum. I am also interested in working on ambitious projects with positive people and goal oriented companies.</p>
             <a href="#" class="button dark-button get-cv">Get my CV <i class="fa-solid fa-download"></i></a>
-            <section class="about-box">
+            <div class="about-box">
                 <div class="about-lang-color">
                     <div class="about-languages">
                         <p class="about-list-heading">Languages</p>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="about-skills-color">
                     <div class="about-skills">
-                        <p` class="about-list-heading">Skills</p>
+                        <p class="about-list-heading">Skills</>
                         <ul class="about-list">
                             <li>Codekit</li>
                             <li>Codepen</li>
@@ -146,7 +146,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
     </main>
 </body>
