Fixed some more linter problems

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="about-skills-color">
                     <div class="about-skills">
-                        <p class="about-list-heading">Skills</>
+                        <p class="about-list-heading">Skills</p>
                         <ul class="about-list">
                             <li>Codekit</li>
                             <li>Codepen</li>
