Created footer section

--- a/index.html
+++ b/index.html
@@ -149,5 +149,18 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="get-resume">
+            <a href="#" class="ft-get-resume">Get my Resume <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+        <div class="social-networks">
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-stack-overflow"></i></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-github"></i></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
