add contact form html

--- a/index.html
+++ b/index.html
@@ -1,113 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/579b112cc6.js" crossorigin="anonymous"></script>
     <title>Praises Tula</title>
 </head>
+
 <body>
     <header>
-        <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon">
+        <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon" />
     </header>
     <main>
         <section class="headline">
-            <h1>Praises<br>Tula</h1>
-            <p>Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.If you like what you see and have a project you need coded, don’t hesitate and contact me.</p>
-            <a href="#" class="button dark-button start-collaboration">Start Collaboration</a>
+            <h1>Praises<br />Tula</h1>
+            <p>
+                Hello! I am a software developer! I can help you build a product, feature or website. Taka a look of my works.If you like what you see and have a project you need coded, don’t hesitate and contact me.
+            </p>
+            <a href="#" class="button dark-button start-collaboration">Start Collaboration</a
+        >
+      </section>
+      <section class="projects">
+        <h2>Projects</h2>
+        <!-- Project 01 -->
+        <section class="project">
+          <img
+            src="images/Rectangle_21.svg"
+            alt="Project 1"
+            class="project-image"
+          />
+          <div class="project-box">
+            <h3 class="project-name">Project name goes here</h3>
+            <div class="language-container">
+              <span class="language">HTML/CSS</span>
+              <span class="language">Ruby on Rails</span>
+              <span class="language">JavaScript</span>
+            </div>
+            <a href="#" class="button dark-button see-project"
+              >See this project <i class="fa-solid fa-arrow-right"></i
+            ></a>
+            </div>
         </section>
-        <section class="projects">
-            <h2>Projects</h2>
-            <!-- Project 01 -->
-            <section class="project">
-                <img src="images/Rectangle_21.svg" alt="Project 1" class="project-image">
-                <div class="project-box">
-                    <h3 class="project-name">Project name goes here</h3>
-                    <div class="language-container">
-                        <span class="language">HTML/CSS</span>
-                        <span class="language">Ruby on Rails</span>
-                        <span class="language">JavaScript</span>
-                    </div>
-                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+        <!-- Project 02 -->
+        <section class="project">
+            <img src="images/Rectangle_22.svg" alt="Project 1" class="project-image" />
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
                 </div>
-            </section>
-            <!-- Project 02 -->
-            <section class="project">
-                <img src="images/Rectangle_22.svg" alt="Project 1" class="project-image">
-                <div class="project-box">
-                    <h3 class="project-name">Project name goes here</h3>
-                    <div class="language-container">
-                        <span class="language">HTML/CSS</span>
-                        <span class="language">Ruby on Rails</span>
-                        <span class="language">JavaScript</span>
-                    </div>
-                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+            ></a>
+            </div>
+        </section>
+        <!-- Project 03 -->
+        <section class="project">
+            <img src="images/Rectangle_23.svg" alt="Project 1" class="project-image" />
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
                 </div>
-            </section>
-            <!-- Project 03 -->
-            <section class="project">
-                <img src="images/Rectangle_23.svg" alt="Project 1" class="project-image">
-                <div class="project-box">
-                    <h3 class="project-name">Project name goes here</h3>
-                    <div class="language-container">
-                        <span class="language">HTML/CSS</span>
-                        <span class="language">Ruby on Rails</span>
-                        <span class="language">JavaScript</span>
-                    </div>
-                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+            ></a>
+            </div>
+        </section>
+        <!-- Project 04 -->
+        <section class="project">
+            <img src="images/Rectangle_24.svg" alt="Project 1" class="project-image" />
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
                 </div>
-            </section>
-            <!-- Project 04 -->
-            <section class="project">
-                <img src="images/Rectangle_24.svg" alt="Project 1" class="project-image">
-                <div class="project-box">
-                    <h3 class="project-name">Project name goes here</h3>
-                    <div class="language-container">
-                        <span class="language">HTML/CSS</span>
-                        <span class="language">Ruby on Rails</span>
-                        <span class="language">JavaScript</span>
-                    </div>
-                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+            ></a>
+            </div>
+        </section>
+        <!-- Project 05 -->
+        <section class="project">
+            <img src="images/Rectangle_25.svg" alt="Project 1" class="project-image" />
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
                 </div>
-            </section>
-            <!-- Project 05 -->
-            <section class="project">
-                <img src="images/Rectangle_25.svg" alt="Project 1" class="project-image">
-                <div class="project-box">
-                    <h3 class="project-name">Project name goes here</h3>
-                    <div class="language-container">
-                        <span class="language">HTML/CSS</span>
-                        <span class="language">Ruby on Rails</span>
-                        <span class="language">JavaScript</span>
-                    </div>
-                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+            ></a>
+            </div>
+        </section>
+        <!-- Project 06 -->
+        <section class="project">
+            <img src="images/Rectangle_26.svg" alt="Project 1" class="project-image" />
+            <div class="project-box">
+                <h3 class="project-name">Project name goes here</h3>
+                <div class="language-container">
+                    <span class="language">HTML/CSS</span>
+                    <span class="language">Ruby on Rails</span>
+                    <span class="language">JavaScript</span>
                 </div>
-            </section>
-            <!-- Project 06 -->
-            <section class="project">
-                <img src="images/Rectangle_26.svg" alt="Project 1" class="project-image">
-                <div class="project-box">
-                    <h3 class="project-name">Project name goes here</h3>
-                    <div class="language-container">
-                        <span class="language">HTML/CSS</span>
-                        <span class="language">Ruby on Rails</span>
-                        <span class="language">JavaScript</span>
-                    </div>
-                    <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i></a>
-                </div>
-            </section>
+                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+            ></a>
+            </div>
+        </section>
         </section>
         <section class="about">
             <h2>About</h2>
-            <p>I'm a Software Developer located in Nigeria. I have great passion for UI creation, effect, animation and dynamic user experiences.<br><br>
-            I derive great pleasure in using software programs to develop solutions to problems while having a high test of excellence and good attention to detail. Fan of Liverpool FC, love TV series and sports.<br><br>
-            Interested in both Front-End and Back-End spectrum. I am also interested in working on ambitious projects with positive people and goal oriented companies.</p>
-            <a href="#" class="button dark-button get-cv">Get my CV <i class="fa-solid fa-download"></i></a>
+            <p>
+                I'm a Software Developer located in Nigeria. I have great passion for UI creation, effect, animation and dynamic user experiences.<br /><br /> I derive great pleasure in using software programs to develop solutions to problems while having
+                a high test of excellence and good attention to detail. Fan of Liverpool FC, love TV series and sports.
+                <br /><br /> Interested in both Front-End and Back-End spectrum. I am also interested in working on ambitious projects with positive people and goal oriented companies.
+            </p>
+            <a href="#" class="button dark-button get-cv">Get my CV <i class="fa-solid fa-download"></i
+        ></a>
             <div class="about-box">
                 <div class="about-lang-color">
                     <div class="about-languages">
@@ -127,7 +146,7 @@
                         <p class="about-list-heading">Frame Works</p>
                         <ul class="about-list">
                             <li>Bootstrap</li>
-                            <li>Ruby  on rails</li>
+                            <li>Ruby on rails</li>
                             <li>RSpec</li>
                             <li>Capibara</li>
                             <li>Selenium</li>
@@ -148,19 +167,39 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h1>Get started</h1>
+            <p>
+                I am interested in remote & freelance opportunities - especially ambitious or large projects. However, if you have other request or question, don't hesitate to use the form.
+            </p>
+            <form action="https://formspree.io/f/xlezygjj" method="POST">
+                <input type="text" placeholder="Your name" />
+                <input type="email" placeholder="Your email" />
+                <textarea id="message" cols="30" rows="10" placeholder="Enter your message here..."></textarea>
+                <button type="button">Start collaboration</button>
+            </form>
+        </section>
     </main>
     <footer>
         <div class="get-resume">
-            <a href="#" class="ft-get-resume">Get my Resume <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="#" class="ft-get-resume">Get my Resume <i class="fa-solid fa-arrow-up-right-from-square"></i
+        ></a>
         </div>
         <div class="social-networks">
-            <a href="#" class="social-network-icon"><i class="fa-brands fa-stack-overflow"></i></a>
-            <a href="#" class="social-network-icon"><i class="fa-brands fa-github"></i></a>
-            <a href="#" class="social-network-icon"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#" class="social-network-icon"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#" class="social-network-icon"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#" class="social-network-icon"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-stack-overflow"></i
+        ></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-github"></i
+        ></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-twitter"></i
+        ></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-linkedin"></i
+        ></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-facebook-f"></i
+        ></a>
+            <a href="#" class="social-network-icon"><i class="fa-brands fa-instagram"></i
+        ></a>
         </div>
     </footer>
 </body>
+
 </html>
