--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                 I am interested in remote & freelance opportunities - especially ambitious or large projects. However, if you have other request or question, don't hesitate to use the form.
             </p>
             <form action="https://formspree.io/f/xlezygjj" method="POST">
-                <input type="text" placeholder="Your name" />
-                <input type="email" placeholder="Your email" />
-                <textarea id="message" cols="30" rows="10" placeholder="Enter your message here..."></textarea>
-                <button type="button">Start collaboration</button>
+                <input type="text" placeholder="Your name" maxlength="30" required="required" />
+                <input type="email" placeholder="Your email" required="required" />
+                <textarea id="message" cols="30" rows="10" maxlength="500" required="required" placeholder="Enter your message here..."></textarea>
+                <button type="submit">Start collaboration</button>
             </form>
         </section>
     </main>
