--- a/index.html
+++ b/index.html
@@ -167,17 +167,22 @@
                 </div>
             </div>
         </section>
-        <section>
-            <h1>Get started</h1>
-            <p>
-                I am interested in remote & freelance opportunities - especially ambitious or large projects. However, if you have other request or question, don't hesitate to use the form.
-            </p>
-            <form action="https://formspree.io/f/xlezygjj" method="POST">
-                <input type="text" placeholder="Your name" maxlength="30" required="required" />
-                <input type="email" placeholder="Your email" required="required" />
-                <textarea id="message" cols="30" rows="10" maxlength="500" required="required" placeholder="Enter your message here..."></textarea>
-                <button type="submit">Start collaboration</button>
-            </form>
+        <section class="contact-form">
+            <div class="contact-form-background"></div>
+            <div class="contact-form-container">
+                <div>
+                    <h2 class="contact-header">Get started</h2>
+                <p>
+                    I am interested in remote & freelance opportunities - especially ambitious or large projects. However, if you have other request or question, don't hesitate to use the form.
+                </p>
+                </div>
+                <form action="https://formspree.io/f/xlezygjj" method="POST">
+                    <input type="text" placeholder="Your name" maxlength="30" required="required" />
+                    <input type="email" placeholder="Your email" required="required" />
+                    <textarea id="message" cols="30" rows="10" maxlength="500" required="required" placeholder="Enter your message here..."></textarea>
+                    <button type="submit" class="button dark-button contact-button">Start collaboration</button>
+                </form>
+            </div>
         </section>
     </main>
     <footer>
