--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon" />
     </header>
     <main>
+        <!-- HEADLINE SECTION -->
         <section class="headline">
             <h1>Praises<br />Tula</h1>
             <p>
@@ -26,6 +27,7 @@
             <a href="#" class="button dark-button start-collaboration">Start Collaboration</a
         >
       </section>
+      <!-- PROJECT SECTION -->
       <section class="projects">
         <h2>Projects</h2>
         <!-- Project 01 -->
@@ -118,6 +120,7 @@
             </div>
         </section>
         </section>
+        <!-- ABOUT SECTION -->
         <section class="about">
             <h2>About</h2>
             <p>
@@ -167,15 +170,14 @@
                 </div>
             </div>
         </section>
+        <!-- CONTACT FORM -->
         <section class="contact-form">
             <div class="contact-form-background"></div>
             <div class="contact-form-container">
-                <div>
-                    <h2 class="contact-header">Get started</h2>
+                <h2 class="contact-header">Get started</h2>
                 <p>
                     I am interested in remote & freelance opportunities - especially ambitious or large projects. However, if you have other request or question, don't hesitate to use the form.
                 </p>
-                </div>
                 <form action="https://formspree.io/f/xlezygjj" method="POST">
                     <input type="text" placeholder="Your name" maxlength="30" required="required" />
                     <input type="email" placeholder="Your email" required="required" />
